--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author:
   email: contact@li-on.fr
 
 footer_text: >
-  © LI/ON – Projet industriel porté par Yzelios.
+  © LI/ON – Projet industriel porté par li/on sas.
   Site à vocation informative – version transitoire.
 
 header_pages:
